Revamp index.html for dark futuristic design
Updated HTML structure and styles for a dark futuristic theme. Enhanced the header, footer, and main content sections with new styles and layout adjustments.

--- a/index.html
+++ b/index.html
@@ -1,79 +1,441 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algeriano_Neo — 2026</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Algeriano_Neo — 2026 (Dark Futuristic Glass)</title>
 
-    <!-- ربط CSS -->
-    <link rel="stylesheet" href="style.css">
+<style>
+  :root{
+    --bg-1:#05060a;
+    --bg-2:#0e1116;
+    --glass: rgba(255,255,255,0.04);
+    --accent-1:#00e5ff;
+    --accent-2:#7a2bff;
+    --muted:#bfcbd6;
+  }
+
+  /* ---------- Reset ---------- */
+  *{box-sizing:border-box;margin:0;padding:0}
+  html,body{height:100%}
+  body{
+    font-family:"Cairo", "Tajawal", system-ui, Arial;
+    background: radial-gradient(1200px 600px at 10% 10%, rgba(122,43,255,0.06), transparent 10%),
+                linear-gradient(180deg,var(--bg-1),var(--bg-2) 60%);
+    color:#eef6fb;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+    overflow-x:hidden;
+  }
+
+  /* ---------- Top container / header ---------- */
+  .top {
+    position:sticky;
+    top:0;
+    z-index:1200;
+    backdrop-filter: blur(8px) saturate(120%);
+    background: linear-gradient(180deg, rgba(10,12,16,0.6), rgba(6,8,10,0.4));
+    border-bottom: 1px solid rgba(255,255,255,0.03);
+    box-shadow: 0 6px 30px rgba(0,0,0,0.6);
+  }
+
+  .header-row{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:16px;
+    padding:14px 20px;
+    max-width:1200px;
+    margin:0 auto;
+  }
+
+  /* small decorative glass box left (optional) */
+  .pre-logo {
+    width:56px;height:56px;border-radius:12px;
+    background: linear-gradient(180deg, rgba(0,0,0,0.25), rgba(255,255,255,0.02));
+    border:1px solid rgba(255,255,255,0.03);
+    display:flex;align-items:center;justify-content:center;
+    box-shadow: 0 6px 30px rgba(122,43,255,0.06), inset 0 1px 8px rgba(255,255,255,0.02);
+  }
+
+  .pre-logo img{width:44px;height:auto;display:block;border-radius:8px;filter:drop-shadow(0 8px 20px rgba(0,229,255,0.06))}
+
+  .brand {
+    display:flex;
+    align-items:center;
+    gap:14px;
+    flex:1;
+    justify-content:center;
+  }
+
+  .brand-title{
+    font-weight:900;
+    font-size:22px;
+    letter-spacing:2px;
+    background: linear-gradient(90deg,var(--accent-1),var(--accent-2));
+    -webkit-background-clip:text;color:transparent;
+    text-shadow:0 6px 28px rgba(122,43,255,0.06);
+    transform: translateZ(0);
+  }
+
+  .controls{
+    display:flex;
+    align-items:center;
+    gap:10px;
+  }
+
+  .menu-btn{
+    background: linear-gradient(180deg,var(--accent-1),var(--accent-2));
+    color:#041018;
+    font-weight:800;
+    padding:10px 14px;
+    border-radius:12px;
+    border:none;
+    cursor:pointer;
+    box-shadow: 0 6px 30px rgba(0,229,255,0.08);
+    transition: transform .16s ease, box-shadow .16s ease;
+  }
+  .menu-btn:active{transform:scale(.98)}
+
+  /* ---------- News ticker (LEFT -> RIGHT) ---------- */
+  .news-wrap{
+    width:100%;
+    background: linear-gradient(90deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02));
+    border-top: 1px solid rgba(122,43,255,0.04);
+    border-bottom: 1px solid rgba(0,229,255,0.04);
+    overflow:hidden;
+  }
+
+  .news {
+    display:block;
+    white-space:nowrap;
+    font-size:15px;
+    color:var(--accent-1);
+    padding:10px 20px;
+    will-change:transform;
+    animation: news-marquee 16s linear infinite;
+  }
+
+  @keyframes news-marquee{
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
+  }
+
+  /* ---------- Main hero (Glass 3D) ---------- */
+  .container{
+    max-width:1200px;
+    margin:34px auto;
+    padding: 0 20px;
+  }
+
+  .hero {
+    display:grid;
+    grid-template-columns: 1fr;
+    align-items:center;
+    gap:22px;
+    justify-items:center;
+  }
+
+  .glass {
+    width:100%;
+    max-width:980px;
+    border-radius:18px;
+    padding:30px;
+    background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+    border: 1px solid rgba(255,255,255,0.03);
+    box-shadow: 0 20px 80px rgba(12,12,15,0.75), inset 0 1px 0 rgba(255,255,255,0.02);
+    transform-style:preserve-3d;
+    perspective:1000px;
+    position:relative;
+    overflow:hidden;
+  }
+
+  /* subtle neon lines */
+  .glass::before{
+    content:"";
+    position:absolute;left:-20%;top:-30%;
+    width:140%;height:200%;
+    background: radial-gradient(circle at 20% 20%, rgba(122,43,255,0.06), transparent 8%),
+                radial-gradient(circle at 80% 80%, rgba(0,229,255,0.04), transparent 12%);
+    pointer-events:none;
+    mix-blend-mode:screen;
+  }
+
+  .hero-row{
+    display:flex;
+    gap:20px;
+    align-items:center;
+    justify-content:space-between;
+    flex-wrap:wrap;
+  }
+
+  .hero-left{
+    flex:1 1 420px;
+    min-width:260px;
+  }
+
+  .hero-title{
+    font-size:32px;
+    line-height:1.05;
+    font-weight:900;
+    margin-bottom:12px;
+    background: linear-gradient(90deg,var(--accent-1),var(--accent-2));
+    -webkit-background-clip:text;color:transparent;
+    text-shadow:0 10px 40px rgba(122,43,255,0.06);
+  }
+
+  .hero-desc{
+    color:var(--muted);
+    font-size:16px;
+    margin-bottom:18px;
+  }
+
+  .cta-row{display:flex;gap:12px;flex-wrap:wrap}
+  .btn{
+    padding:12px 18px;border-radius:12px;border:none;cursor:pointer;font-weight:700;
+    background:linear-gradient(90deg,var(--accent-1),var(--accent-2));
+    color:#02121a; box-shadow: 0 10px 30px rgba(0,229,255,0.06);
+  }
+
+  .ghost{
+    background:transparent;color:var(--muted);border:1px solid rgba(255,255,255,0.04);
+  }
+
+  /* hero-right: cards for sections */
+  .hero-right{
+    width:340px;
+    display:grid;
+    gap:12px;
+    align-self:start;
+  }
+
+  .card{
+    background: linear-gradient(180deg, rgba(255,255,255,0.015), rgba(255,255,255,0.01));
+    border-radius:12px;
+    padding:14px;
+    border:1px solid rgba(255,255,255,0.02);
+    box-shadow: 0 8px 40px rgba(0,0,0,0.6);
+    transition: transform .18s ease, box-shadow .18s ease;
+    cursor:pointer;
+  }
+  .card:hover{transform:translateY(-6px); box-shadow:0 18px 60px rgba(122,43,255,0.06)}
+
+  .card h4{margin-bottom:6px;color:#fff}
+  .card p{color:var(--muted);font-size:14px}
+
+  /* particle dots (decorative) */
+  .dots{
+    position:absolute;right:20px;bottom:18px;opacity:.12;filter:blur(2px);
+    display:flex;gap:8px;transform: translateZ(-10px);
+  }
+  .dot{width:8px;height:8px;border-radius:50%;background:var(--accent-1);box-shadow:0 0 8px var(--accent-1)}
+  .dot2{background:var(--accent-2);box-shadow:0 0 8px var(--accent-2)}
+
+  /* ---------- Sections grid ---------- */
+  .sections{
+    margin-top:28px;
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+    gap:18px;
+  }
+  .section-card{
+    background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+    border-radius:12px;padding:18px;border:1px solid rgba(255,255,255,0.02);
+    transition:transform .18s ease;
+  }
+  .section-card:hover{transform:translateY(-8px);box-shadow:0 20px 70px rgba(0,0,0,0.6)}
+
+  /* ---------- Footer ---------- */
+  footer{
+    margin-top:36px;padding:22px 16px;text-align:center;color:var(--muted);
+    border-top:1px solid rgba(255,255,255,0.02);
+  }
+
+  /* ---------- Responsive ---------- */
+  @media (max-width:920px){
+    .hero-right{width:100%}
+    .hero-row{flex-direction:column-reverse;align-items:stretch}
+  }
+  @media (max-width:520px){
+    .brand-title{font-size:18px}
+    .hero-title{font-size:22px}
+    .glass{padding:18px}
+    .pre-logo{display:none}
+    .menu-btn{padding:8px}
+  }
+
+</style>
 </head>
-
 <body>
 
-<!-- 🔥 الشريط العلوي -->
-<header>
-    <div class="top-bar">
+  <!-- TOP / HEADER -->
+  <div class="top" role="banner">
+    <div class="header-row">
+      <div class="pre-logo" title="Algeria">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Flag_map_of_Algeria.svg/640px-Flag_map_of_Algeria.svg.png" alt="Algeria" style="width:44px;height:auto">
+      </div>
 
-        <!-- صورة قبل اللوغو -->
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Flag_map_of_Algeria.svg/640px-Flag_map_of_Algeria.svg.png"
-             class="pre-logo-img" alt="map">
+      <div class="brand" aria-hidden="false">
+        <div class="brand-title">Algeriano_Neo</div>
+      </div>
 
-        <!-- اللوغو -->
-        <div class="logo">Algeriano_Neo</div>
-
-        <!-- زر القائمة -->
-        <div class="menu-btn" onclick="toggleMenu()">☰</div>
-
+      <div class="controls">
+        <button class="menu-btn" id="menuBtn" aria-expanded="false" aria-controls="sideMenu">☰ القائمة</button>
+      </div>
     </div>
 
-    <!-- شريط الأخبار -->
-    <div class="news-bar">
-        <marquee direction="left" scrollamount="6">
-            🔥 أحدث منصة جزائرية تجمع التجارة — الخدمات — الترفيه — السائقين — الصحة — التقنية 🔥
-        </marquee>
+    <!-- news ticker (left -> right) -->
+    <div class="news-wrap">
+      <div class="news" role="note" aria-live="polite">
+        🔥 مرحباً بكم في Algeriano_Neo — منصة جزائرية متعددة الخدمات: التجارة • الخدمات • الصحة • الترفيه • السائقين • قسم المرأة • المتجر العام 🔥
+      </div>
     </div>
-</header>
+  </div>
 
+  <!-- CONTENT -->
+  <div class="container">
+    <section class="hero">
+      <div class="glass" id="glassCard">
+        <div class="hero-row">
+          <div class="hero-left">
+            <div class="hero-title">المنصة الجزائريّة العملاقة</div>
+            <div class="hero-desc">Algeriano_Neo — مكان واحد لكل ما يحتاجه السوق الجزائري: تبادل، خدمات، ربح، توصيل، صحة، ورفاهية للشباب.</div>
 
+            <div class="cta-row">
+              <button class="btn">ابدأ الآن</button>
+              <button class="btn ghost">تعرّف أكثر</button>
+            </div>
+          </div>
 
-<!-- 🔥 القائمة المنسدلة -->
-<nav id="menu">
-    <a href="#">الرئيسية</a>
-    <a href="#">التجارة بوسيط</a>
-    <a href="#">الخدمات</a>
-    <a href="#">الترفيه</a>
-    <a href="#">النقل بالسائقين</a>
-    <a href="#">الصحة</a>
-    <a href="#">قسم المرأة</a>
-    <a href="#">المطاعم</a>
-    <a href="#">العقار</a>
-    <a href="#">التقنية والدروس</a>
-    <a href="#">السفر والسياحة</a>
-    <a href="#">المتجر العام</a>
-</nav>
+          <div class="hero-right" aria-hidden="false">
+            <div class="card">
+              <h4>التجارة بوسيط</h4>
+              <p>بيع واش تشري عبر منصتنا بآمان وبدون مشاكل.</p>
+            </div>
+            <div class="card">
+              <h4>خدمات محلية</h4>
+              <p>التعامل مع مزودين محليين بغلاف حماية المنصة.</p>
+            </div>
+            <div class="card">
+              <h4>السائقين</h4>
+              <p>اشتراك للسائقين: توصيل آمن وسريع.</p>
+            </div>
+          </div>
+        </div>
 
+        <div class="dots" aria-hidden="true">
+          <div class="dot"></div><div class="dot2"></div><div class="dot"></div>
+        </div>
+      </div>
 
+      <!-- sections grid -->
+      <div class="sections" style="width:100%;margin-top:20px">
+        <div class="section-card"><strong>الترفيه</strong><div style="color:var(--muted);margin-top:8px">محتوى شبابي وفيديوهات قصيرة.</div></div>
+        <div class="section-card"><strong>الصحة</strong><div style="color:var(--muted);margin-top:8px">حجز مواعيد واستشارات عن بعد.</div></div>
+        <div class="section-card"><strong>قسم المرأة</strong><div style="color:var(--muted);margin-top:8px">مساحة خاصة وآمنة للنساء.</div></div>
+        <div class="section-card"><strong>المطاعم</strong><div style="color:var(--muted);margin-top:8px">طلب وتسليم بأفضل العروض.</div></div>
+        <div class="section-card"><strong>العقار</strong><div style="color:var(--muted);margin-top:8px">بيع واستئجار وإعلانات موثوقة.</div></div>
+        <div class="section-card"><strong>التقنية والدروس</strong><div style="color:var(--muted);margin-top:8px">دروس وورشات ومحتوى تعليمي.</div></div>
+      </div>
+    </section>
+  </div>
 
-<!-- 🔥 صفحة الترحيب -->
-<section class="welcome">
-    <h1>مرحبًا بكم في <span>Algeriano_Neo</span></h1>
-    <p>
-        العملاق الجزائري الجديد… يجمع التجارة، الترفيه، الخدمات، الصحة، التوصيل، التقنية،
-        المطاعم، العقار، وكل شيء في منصة واحدة ✨.
-    </p>
-</section>
+  <!-- SIDE MENU -->
+  <nav id="sideMenu" aria-hidden="true" style="position:fixed;top:0;right:-320px;width:320px;height:100%;background:linear-gradient(180deg,rgba(10,10,12,0.98),rgba(6,6,8,0.96));box-shadow:-20px 0 80px rgba(0,0,0,0.6);padding-top:90px;transition:0.38s;z-index:1300">
+    <div style="padding:0 20px;display:flex;flex-direction:column;gap:8px">
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">الرئيسية</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">التجارة بوسيط</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">الخدمات</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">الترفيه</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">السائقين</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">الصحة</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">قسم المرأة</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">المطاعم والتغذية</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">العقار</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">التقنية والدروس</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">السفر والسياحة</a>
+      <a href="#" style="color:#fff;text-decoration:none;padding:14px;border-radius:10px;background:rgba(255,255,255,0.02)">المتجر العام</a>
+    </div>
+  </nav>
 
+  <!-- FOOTER -->
+  <footer>
+    جميع الحقوق محفوظة © 2026 — Algeriano_Neo
+  </footer>
 
+<script>
+  // Menu toggle + close on outside click + esc
+  const menuBtn = document.getElementById('menuBtn');
+  const sideMenu = document.getElementById('sideMenu');
+  let menuOpen = false;
 
-<!-- 🔥 الحقوق -->
-<footer>
-    <p>جميع الحقوق محفوظة © 2026 — Algeriano_Neo</p>
-</footer>
+  function openMenu(){
+    sideMenu.style.right = '0';
+    sideMenu.setAttribute('aria-hidden','false');
+    menuBtn.setAttribute('aria-expanded','true');
+    menuOpen = true;
+  }
+  function closeMenu(){
+    sideMenu.style.right = '-320px';
+    sideMenu.setAttribute('aria-hidden','true');
+    menuBtn.setAttribute('aria-expanded','false');
+    menuOpen = false;
+  }
 
+  function toggleMenu(){
+    if(menuOpen) closeMenu(); else openMenu();
+  }
 
-<!-- ربط JS -->
-<script src="script.js"></script>
+  menuBtn.addEventListener('click', (e)=>{
+    e.stopPropagation();
+    toggleMenu();
+  });
 
+  // close menu clicking outside
+  document.addEventListener('click', (e)=>{
+    if(!menuOpen) return;
+    const inside = e.composedPath().includes(sideMenu) || e.composedPath().includes(menuBtn);
+    if(!inside) closeMenu();
+  });
+
+  // esc to close
+  document.addEventListener('keydown', (e)=>{
+    if(e.key === 'Escape' && menuOpen) closeMenu();
+  });
+
+  // subtle parallax tilt for glass card (mouse and touch)
+  const glass = document.getElementById('glassCard');
+  const maxTilt = 8; // degrees
+  let bounding, cx, cy;
+
+  function onMove(e){
+    if(!glass) return;
+    bounding = glass.getBoundingClientRect();
+    cx = bounding.left + bounding.width/2;
+    cy = bounding.top + bounding.height/2;
+    const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+    const clientY = e.touches ? e.touches[0].clientY : e.clientY;
+    const dx = clientX - cx;
+    const dy = clientY - cy;
+    const rx = (-dy / (bounding.height/2)) * maxTilt;
+    const ry = (dx / (bounding.width/2)) * maxTilt;
+    glass.style.transform = `rotateX(${rx}deg) rotateY(${ry}deg) translateZ(6px)`;
+  }
+  function onLeave(){
+    if(!glass) return;
+    glass.style.transform = 'rotateX(0deg) rotateY(0deg) translateZ(0)';
+  }
+
+  document.addEventListener('mousemove', onMove);
+  document.addEventListener('touchmove', onMove, {passive:true});
+  document.addEventListener('mouseleave', onLeave);
+  document.addEventListener('touchend', onLeave);
+
+  // improve performance: pause ticker on hover
+  const news = document.querySelector('.news');
+  news.addEventListener('mouseenter', ()=> news.style.animationPlayState = 'paused');
+  news.addEventListener('mouseleave', ()=> news.style.animationPlayState = 'running');
+
+</script>
 </body>
 </html>
